Added API schemas for Newsletter and Article
